--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Wilderness</title>
     <link rel="icon" href="" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="description" content="" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
-</body>
-
+    <script
+      src="https://widget.cloudinary.com/v2.0/global/all.js"
+      type="text/javascript"
+    ></script>
+  </body>
 </html>
