--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="" />
 </head>
 
-<body id="dark-mode">
+<body>
   <div id="root"></div>
   <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
 </body>
